Fix client details alignment

--- a/src/app/clients/clients-view/clients-view.component.scss
+++ b/src/app/clients/clients-view/clients-view.component.scss
@@ -31,3 +31,7 @@
 .make-flex {
   display: flex;
 }
+
+.mat-card-title-group {
+  width: 100%;
+}
